@@ -25,6 +25,7 @@ munin (CVS)
   * Plugins: All plugins using logtail now properly detect its format
     (Deb#297628).
   * Plugins: sunos/memory repaired (SF#1143610).
+  * Plugins: Made linux/if_ work with more versions of iwlist (SF#1150954).
   * Docs: Added man page for munin-node-configure-snmp.
   * Docs: Brushed up the comments in the default munin.conf a bit (Deb#294060).
   * Installation: Create CIGdir if nonexistant.
